# finops-optimizer

./: AgentCard.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_with_phoenix.sh
src/: __main__.py  finops_toolset.py  openai_agent.py  openai_agent_executor.py
